fix some warnings
fix some warnings